--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -106,7 +106,7 @@ models_results_df %>%
 
 ## Problem 2
 
-Load and clean the data for regression analysis
+### Load and clean the data for regression analysis
 
 ``` r
 bw_df = read_csv("./data/birthweight.csv") %>% 
@@ -173,3 +173,79 @@ bw_df = bw_df %>%
 There is no missing value in the current dataset. Since data entries for
 two variables **pnumlbw** and **pnumsga** are zero, we choose to drop
 these variables.
+
+### Regression Model
+
+``` r
+bw_dfm = bw_df %>% 
+  select(-parity, -malform, -smoken, -frace, -ppwt, -delwt)
+```
+
+Besides variables mentioned above, variables **parity**, **malform**,
+and **smoken** are highly skewed, thus I choose to remove the three
+variables. Variables \_ppwt\_\_ and **delwt** are also removed
+considering mother’s weight at delivery minus mother’s weight before
+pregnancy equals the Variable \_wtgain\_\_. Based on the hypothesis that
+father’s race is not significantly associated with brith weight, the
+predictor variables used in my model are babysex, bhead, blength, bwt,
+fincome, gaweeks, menarche, mheight, momage, mrace, ppbmi, wtgain.
+
+``` r
+bw_model = lm(bwt ~ ., data = bw_dfm)
+summary(bw_model)
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ ., data = bw_dfm)
+    ## 
+    ## Residuals:
+    ##      Min       1Q   Median       3Q      Max 
+    ## -1080.29  -184.00    -4.33   176.89  2411.56 
+    ## 
+    ## Coefficients:
+    ##               Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept) -6492.6758   140.8468 -46.097  < 2e-16 ***
+    ## babysex2       32.6297     8.5152   3.832 0.000129 ***
+    ## bhead         132.8272     3.4681  38.300  < 2e-16 ***
+    ## blength        76.2685     2.0289  37.592  < 2e-16 ***
+    ## fincome         0.3119     0.1803   1.730 0.083772 .  
+    ## gaweeks        10.7548     1.4701   7.316 3.04e-13 ***
+    ## menarche       -4.0316     2.9143  -1.383 0.166613    
+    ## mheight        11.4649     1.6626   6.896 6.14e-12 ***
+    ## momage          1.0412     1.2269   0.849 0.396119    
+    ## mrace2       -115.7410     9.9578 -11.623  < 2e-16 ***
+    ## mrace3        -50.7342    42.9824  -1.180 0.237927    
+    ## mrace4        -84.7970    19.4380  -4.362 1.32e-05 ***
+    ## ppbmi           7.3893     1.3686   5.399 7.05e-08 ***
+    ## wtgain          3.9580     0.3967   9.976  < 2e-16 ***
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 274.6 on 4328 degrees of freedom
+    ## Multiple R-squared:  0.7134, Adjusted R-squared:  0.7126 
+    ## F-statistic: 828.8 on 13 and 4328 DF,  p-value: < 2.2e-16
+
+``` r
+bw_model %>% 
+  broom::tidy() %>% 
+  select(term, estimate, p.value)
+```
+
+    ## # A tibble: 14 x 3
+    ##    term         estimate   p.value
+    ##    <chr>           <dbl>     <dbl>
+    ##  1 (Intercept) -6493.    0.       
+    ##  2 babysex2       32.6   1.29e-  4
+    ##  3 bhead         133.    1.20e-276
+    ##  4 blength        76.3   6.95e-268
+    ##  5 fincome         0.312 8.38e-  2
+    ##  6 gaweeks        10.8   3.04e- 13
+    ##  7 menarche       -4.03  1.67e-  1
+    ##  8 mheight        11.5   6.14e- 12
+    ##  9 momage          1.04  3.96e-  1
+    ## 10 mrace2       -116.    8.97e- 31
+    ## 11 mrace3        -50.7   2.38e-  1
+    ## 12 mrace4        -84.8   1.32e-  5
+    ## 13 ppbmi           7.39  7.05e-  8
+    ## 14 wtgain          3.96  3.44e- 23
