--- a/p8105_hw6_ls3751.Rmd
+++ b/p8105_hw6_ls3751.Rmd
@@ -137,13 +137,62 @@ Besides variables mentioned above, variables __parity__, __malform__, and __smok
 ```{r}
 bw_model = lm(bwt ~ ., data = bw_dfm)
 summary(bw_model)
-bw_model %>% 
-  broom::tidy() %>% 
-  select(term, estimate, p.value)
+bw_newmodel = lm(bwt ~ babysex + bhead + blength + fincome + gaweeks + mheight + mrace + ppbmi + wtgain, data = bw_dfm)
 ```
 
+Since the coefficients of variables __menarche__ and __momage__ are not significant at 0.1 significance level, the R-sqaured is not impaired after dropping the two variables(`r summary(bw_model)$r.squared ` vs. `r summary(bw_newmodel)$r.squared `)
 
+```{r}
+bw_newmodel %>% 
+  broom::tidy() %>% 
+  select(term, estimate, p.value) %>% 
+  knitr::kable()
+```
 
+### Residuals plot
+
+```{r model residuals against fitted values}
+bw_dfm %>% 
+  add_residuals(bw_newmodel) %>% 
+  add_predictions(bw_newmodel) %>% 
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point() +
+  stat_smooth(method = "lm")
+```
+
+### Cross Validation
+
+```{r}
+cv_df = 
+  crossv_mc(bw_dfm, 100) %>% 
+  mutate(train = map(train, as_tibble),
+         test = map(test, as_tibble)) %>% 
+  mutate(model_1  = map(train, ~lm(bwt ~ babysex + bhead + blength + fincome + 
+                                     gaweeks + mheight + mrace + ppbmi + wtgain, data = .x)),
+         model_2  = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+         model_3  = map(train, ~lm(bwt ~ blength*bhead*babysex, data = .x))) %>% 
+  mutate(rmse_1 = map2_dbl(model_1, test, ~rmse(model = .x, data = .y)),
+         rmse_2 = map2_dbl(model_2, test, ~rmse(model = .x, data = .y)),
+         rmse_3 = map2_dbl(model_3, test, ~rmse(model = .x, data = .y)))
+```
+
+```{r cross validation}
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model",
+    values_to = "rmse",
+    names_prefix = "rmse_"
+  ) %>% 
+  ggplot(aes(x = model, y = rmse)) +
+  geom_violin() +
+  labs(
+    title = "Comparing RMSE value for Three Linear Models",
+    x = "Model",
+    y = "RMSE"
+  ) 
+```
 
 
 
