--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -227,25 +227,82 @@ summary(bw_model)
     ## F-statistic: 828.8 on 13 and 4328 DF,  p-value: < 2.2e-16
 
 ``` r
-bw_model %>% 
-  broom::tidy() %>% 
-  select(term, estimate, p.value)
+bw_newmodel = lm(bwt ~ babysex + bhead + blength + fincome + gaweeks + mheight + mrace + ppbmi + wtgain, data = bw_dfm)
 ```
 
-    ## # A tibble: 14 x 3
-    ##    term         estimate   p.value
-    ##    <chr>           <dbl>     <dbl>
-    ##  1 (Intercept) -6493.    0.       
-    ##  2 babysex2       32.6   1.29e-  4
-    ##  3 bhead         133.    1.20e-276
-    ##  4 blength        76.3   6.95e-268
-    ##  5 fincome         0.312 8.38e-  2
-    ##  6 gaweeks        10.8   3.04e- 13
-    ##  7 menarche       -4.03  1.67e-  1
-    ##  8 mheight        11.5   6.14e- 12
-    ##  9 momage          1.04  3.96e-  1
-    ## 10 mrace2       -116.    8.97e- 31
-    ## 11 mrace3        -50.7   2.38e-  1
-    ## 12 mrace4        -84.8   1.32e-  5
-    ## 13 ppbmi           7.39  7.05e-  8
-    ## 14 wtgain          3.96  3.44e- 23
+Since the coefficients of variables **menarche** and **momage** are not
+significant at 0.1 significance level, the R-sqaured is not impaired
+after dropping the two variables(0.7134221 vs. 0.7132718)
+
+``` r
+bw_newmodel %>% 
+  broom::tidy() %>% 
+  select(term, estimate, p.value) %>% 
+  knitr::kable()
+```
+
+| term        |       estimate |   p.value |
+| :---------- | -------------: | --------: |
+| (Intercept) | \-6529.0616379 | 0.0000000 |
+| babysex2    |     32.5208997 | 0.0001350 |
+| bhead       |    132.7810026 | 0.0000000 |
+| blength     |     76.3072692 | 0.0000000 |
+| fincome     |      0.3484445 | 0.0479049 |
+| gaweeks     |     10.7986853 | 0.0000000 |
+| mheight     |     11.4134011 | 0.0000000 |
+| mrace2      |  \-117.8229618 | 0.0000000 |
+| mrace3      |   \-50.0025883 | 0.2403486 |
+| mrace4      |   \-86.2910900 | 0.0000089 |
+| ppbmi       |      7.7438872 | 0.0000000 |
+| wtgain      |      3.9588936 | 0.0000000 |
+
+### Residuals plot
+
+``` r
+bw_dfm %>% 
+  add_residuals(bw_newmodel) %>% 
+  add_predictions(bw_newmodel) %>% 
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point() +
+  stat_smooth(method = "lm")
+```
+
+    ## `geom_smooth()` using formula 'y ~ x'
+
+<img src="p8105_hw6_ls3751_files/figure-gfm/model residuals against fitted values-1.png" width="90%" />
+
+### Cross Validation
+
+``` r
+cv_df = 
+  crossv_mc(bw_dfm, 100) %>% 
+  mutate(train = map(train, as_tibble),
+         test = map(test, as_tibble)) %>% 
+  mutate(model_1  = map(train, ~lm(bwt ~ babysex + bhead + blength + fincome + 
+                                     gaweeks + mheight + mrace + ppbmi + wtgain, data = .x)),
+         model_2  = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+         model_3  = map(train, ~lm(bwt ~ blength*bhead*babysex, data = .x))) %>% 
+  mutate(rmse_1 = map2_dbl(model_1, test, ~rmse(model = .x, data = .y)),
+         rmse_2 = map2_dbl(model_2, test, ~rmse(model = .x, data = .y)),
+         rmse_3 = map2_dbl(model_3, test, ~rmse(model = .x, data = .y)))
+```
+
+``` r
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model",
+    values_to = "rmse",
+    names_prefix = "rmse_"
+  ) %>% 
+  ggplot(aes(x = model, y = rmse)) +
+  geom_violin() +
+  labs(
+    title = "Comparing RMSE value for Three Linear Models",
+    x = "Model",
+    y = "RMSE"
+  ) 
+```
+
+<img src="p8105_hw6_ls3751_files/figure-gfm/cross validation-1.png" width="90%" />
