--- a/p8105_hw6_ls3751.Rmd
+++ b/p8105_hw6_ls3751.Rmd
@@ -194,5 +194,21 @@ cv_df %>%
   ) 
 ```
 
+## Problem 3
+
+Load the dataset
+```{r, cache = T}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
 
 
