generate 5000 bootstrap samples

--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -334,3 +334,32 @@ weather_df =
     ## date created (size, mb): 2020-10-03 17:40:39 (7.537)
 
     ## file min/max dates: 1869-01-01 / 2020-10-31
+
+### Generate 5000 bootstrap samples for distributions of interests
+
+``` r
+bootstrap_rsquared <-
+  weather_df %>%
+  select(tmax, tmin) %>% 
+  bootstrap(5000, id = "sample_id") %>% 
+  mutate(model = map(.x = strap, ~lm(tmax ~ tmin,data = .x)),
+         result = map(model, broom::glance)) %>% 
+  select(sample_id, result) %>% 
+  unnest(result) 
+```
+
+``` r
+bootstrap_logbeta <-
+  weather_df %>%
+  select(tmax, tmin) %>% 
+  bootstrap(5000, id = "sample_id") %>% 
+  mutate(model = map(.x = strap, ~lm(tmax ~ tmin,data = .x)),
+         result = map(model, broom::tidy)) %>% 
+  select(sample_id, result) %>%
+  unnest(result) %>%
+  select(sample_id, term, estimate) %>% 
+  mutate(term = str_replace(term, "\\(Intercept\\)", "intercept")) %>% 
+  pivot_wider(names_from = term,
+              values_from = estimate) %>% 
+  mutate(logbeta = log(intercept * tmin))
+```
