--- a/p8105_hw6_ls3751.Rmd
+++ b/p8105_hw6_ls3751.Rmd
@@ -211,4 +211,32 @@ weather_df =
   select(name, id, everything())
 ```
 
+### Generate 5000 bootstrap samples for distributions of interests
+
+```{r, cache = T}
+bootstrap_rsquared <-
+  weather_df %>%
+  select(tmax, tmin) %>% 
+  bootstrap(5000, id = "sample_id") %>% 
+  mutate(model = map(.x = strap, ~lm(tmax ~ tmin,data = .x)),
+         result = map(model, broom::glance)) %>% 
+  select(sample_id, result) %>% 
+  unnest(result) 
+```
+
+```{r, cache = T}
+bootstrap_logbeta <-
+  weather_df %>%
+  select(tmax, tmin) %>% 
+  bootstrap(5000, id = "sample_id") %>% 
+  mutate(model = map(.x = strap, ~lm(tmax ~ tmin,data = .x)),
+         result = map(model, broom::tidy)) %>% 
+  select(sample_id, result) %>%
+  unnest(result) %>%
+  select(sample_id, term, estimate) %>% 
+  mutate(term = str_replace(term, "\\(Intercept\\)", "intercept")) %>% 
+  pivot_wider(names_from = term,
+              values_from = estimate) %>% 
+  mutate(logbeta = log(intercept * tmin))
+```
 
