--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -363,3 +363,29 @@ bootstrap_logbeta <-
               values_from = estimate) %>% 
   mutate(logbeta = log(intercept * tmin))
 ```
+
+### Plot the distibutions
+
+``` r
+bootstrap_rsquared %>% 
+  ggplot(aes(x = r.squared)) +
+  geom_density() +
+  labs(
+    title = "The distribution of r squared",
+    y = "Density"
+  )
+```
+
+<img src="p8105_hw6_ls3751_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+``` r
+bootstrap_logbeta %>% 
+  ggplot(aes(x = logbeta)) +
+  geom_density() +
+  labs(
+    title = " The distribution of log(beta0*beta1)",
+    y = "Density"
+  )
+```
+
+<img src="p8105_hw6_ls3751_files/figure-gfm/unnamed-chunk-14-2.png" width="90%" />
