--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -389,3 +389,33 @@ bootstrap_logbeta %>%
 ```
 
 <img src="p8105_hw6_ls3751_files/figure-gfm/unnamed-chunk-14-2.png" width="90%" />
+
+It is noticeable that both estimators seems to be normally distributed.
+
+### 95% Confidence intervals and quantiles
+
+``` r
+bootstrap_rsquared %>% 
+  summarize(
+    CI_lower = quantile(r.squared, 0.025),
+    CI_upper = quantile(r.squared, 0.975)
+  )
+```
+
+    ## # A tibble: 1 x 2
+    ##   CI_lower CI_upper
+    ##      <dbl>    <dbl>
+    ## 1    0.894    0.927
+
+``` r
+bootstrap_logbeta %>% 
+  summarize(
+    CI_lower = quantile(logbeta, 0.025),
+    CI_upper = quantile(logbeta, 0.975)
+  )
+```
+
+    ## # A tibble: 1 x 2
+    ##   CI_lower CI_upper
+    ##      <dbl>    <dbl>
+    ## 1     1.96     2.06
