--- a/p8105_hw6_ls3751.md
+++ b/p8105_hw6_ls3751.md
@@ -299,13 +299,18 @@ cv_df %>%
   ggplot(aes(x = model, y = rmse)) +
   geom_violin() +
   labs(
-    title = "Comparing RMSE value for Three Linear Models",
+    title = "Comparing RMSE values for Three Linear Models",
     x = "Model",
     y = "RMSE"
   ) 
 ```
 
 <img src="p8105_hw6_ls3751_files/figure-gfm/cross validation-1.png" width="90%" />
+
+Based on the violin plot, model 1(my model) has the lowest level of
+prediction error probably due to the the large number of predictor
+variables. The best model is model 1 (babysex + bhead + blength +
+fincome + gaweeks + mheight + mrace + ppbmi + wtgain).
 
 ## Problem 3
 
@@ -390,7 +395,8 @@ bootstrap_logbeta %>%
 
 <img src="p8105_hw6_ls3751_files/figure-gfm/unnamed-chunk-14-2.png" width="90%" />
 
-It is noticeable that both estimators seems to be normally distributed.
+It is noticeable from the two distribution plots that both estimators
+are approximately normally distributed.
 
 ### 95% Confidence intervals and quantiles
 
